--- a/app/src/main/res/layout/fragment_build_list.xml
+++ b/app/src/main/res/layout/fragment_build_list.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".controller.fragment.BuildListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/textView_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="TEST" />
 
 </FrameLayout>
