Build fragment_build_list.xml and Create Repository

--- a/app/src/main/res/layout/fragment_build_list.xml
+++ b/app/src/main/res/layout/fragment_build_list.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".controller.fragment.BuildListFragment">
 
     <TextView
@@ -12,4 +14,25 @@
         android:layout_gravity="center"
         android:text="TEST" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/editText_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:layout_gravity="center" />
+
+    <EditText
+        android:id="@+id/editText_number_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_gravity="center" />
+
+    <Button
+        android:id="@+id/button_build_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/build" />
+
+</LinearLayout>
