/ TaskListFragment: adding floating action button for adding a random task end of HW12

--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,15 +29,19 @@
         android:id="@+id/recycle_view_tasks"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7" />
+        android:layout_weight="7" >
 
-    <Button
-        android:id="@+id/button_add_task"
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_Action_Button_add"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
         android:layout_gravity="end"
-        android:layout_weight="1"
-        android:text="@string/add_task" />
+        android:src="@android:drawable/ic_input_add" />
+
+
 
 
 </LinearLayout>
