--- a/app/src/main/res/layout/activity_task_pager.xml
+++ b/app/src/main/res/layout/activity_task_pager.xml
@@ -21,4 +21,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_Action_Button_add_pager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add" />
 </LinearLayout>
