--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -7,6 +7,24 @@
     android:orientation="vertical"
     tools:context=".controller.fragment.TaskListFragment">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_task_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:queryHint="type your word"
+            app:searchIcon="@drawable/ic_search" />
+    </androidx.appcompat.widget.Toolbar>
+
+
     <LinearLayout
         android:id="@+id/empty_linear_layout"
         android:layout_width="match_parent"
@@ -20,8 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/empty"
-            android:contentDescription="@string/empty_list" />
+            android:contentDescription="@string/empty_list"
+            android:src="@drawable/empty" />
 
     </LinearLayout>
 
@@ -29,7 +47,7 @@
         android:id="@+id/recycle_view_tasks"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7" >
+        android:layout_weight="7">
 
     </androidx.recyclerview.widget.RecyclerView>
 
