--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#068273"
+        android:background="#4a148c"
         android:padding="16dp"
         android:text="Sign up"
         android:textColor="#fbfbfb"
