--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/user_list_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:foregroundGravity="center"
-    android:orientation="vertical"
-    tools:context=".controller.fragment.UserListFragment">
-
-    <LinearLayout
-        android:id="@+id/main_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:gravity="center"
-        android:orientation="vertical" />
+    android:layout_margin="2dp">
 
 
-</ScrollView>
+</androidx.recyclerview.widget.RecyclerView>
